--- a/website/Makefile
+++ b/website/Makefile
@@ -1,4 +1,4 @@
 all: generate
 
 generate:
-	pandoc -s index.md -o index.html --template template.html --css template.css --toc --toc-depth 2 
+	pandoc -o index.html -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 index.md
