clean up... and added sections to member section. fill this out guys!

--- a/website/Makefile
+++ b/website/Makefile
@@ -1,4 +1,4 @@
 all: generate
 
 generate:
-	pandoc -o index.html -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 index.md
+	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title PhotoHunter index.md -o index.html
