adding page for meeting notes

--- a/website/Makefile
+++ b/website/Makefile
@@ -2,6 +2,7 @@ all: generate deploy
 
 generate:
 	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title PhotoHunter index.md -o index.html
+	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'Meeting Notes' meetings.md -o meetings.html
 	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'Connor Greenwell' connor.md -o connor.html
 	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'Ryan Baltenberger' ryan.md -o ryan.html
 	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'J. David Smith' david.md -o david.html
