latest commits page

--- a/website/Makefile
+++ b/website/Makefile
@@ -7,6 +7,7 @@ generate:
 	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'Ryan Baltenberger' ryan.md -o ryan.html
 	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'J. David Smith' david.md -o david.html
 	pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'Aaron Bradshaw' aaron.md -o aaron.html
+	python latest_commits_to_md.py | pandoc -f markdown+raw_html -t html --template template.html --css template.css --toc --toc-depth 2 --title 'Commits' -o commits.html
 
 deploy:
 	rsync -avz * root@104.131.64.39:/var/www/
