--- a/docs/midterm_presentation/Makefile
+++ b/docs/midterm_presentation/Makefile
@@ -1,16 +1,15 @@
 TARGET=pres
 
-all:
+all: spell pdf clean
+
+pdf:
 	pdflatex $(TARGET)
 #	bibtex $(TARGET)
 #	pdflatex $(TARGET)
 #	pdflatex $(TARGET)
 
-pdf:
-	pdflatex $(TARGET)
-
 spell:
 	aspell -ttex -c $(TARGET).tex
 
 clean:
-	rm -f pres.pdf *.blg *.aux *.bbl *.brf *.log *.nav *.snm *.toc *.out
+	rm -f *.blg *.aux *.bbl *.brf *.log *.nav *.snm *.toc *.out
