slide titles and edited makefile

--- a/docs/midterm_presentation/Makefile
+++ b/docs/midterm_presentation/Makefile
@@ -5,7 +5,7 @@ all: spell pdf clean
 pdf:
 	pdflatex $(TARGET)
 #	bibtex $(TARGET)
-#	pdflatex $(TARGET)
+	pdflatex $(TARGET)
 #	pdflatex $(TARGET)
 
 spell:
