minor changes to design doc and makefile (mostly spacing)

--- a/docs/design/Makefile
+++ b/docs/design/Makefile
@@ -5,6 +5,9 @@ all:
 	pdflatex $(TARGET)
 	pdflatex $(TARGET)
 
+dot:
+	dot ../midterm_presentation/figs/er.dot -Tpng -o ../midterm_presentation/figs/er.png
+
 spell:
 	aspell -ttex -c $(TARGET).tex
 
