--- a/src/quickpic/package.json
+++ b/src/quickpic/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "flux": "^2.0.1",
+    "lodash": "^3.6.0",
+    "object-assign": "^2.0.0",
     "react": "^0.12.2"
   },
   "devDependencies": {
